fix: Location centered on mobile

--- a/modules/openy_map_lb/assets/src/scss/openy-map-lb.scss
+++ b/modules/openy_map_lb/assets/src/scss/openy-map-lb.scss
@@ -298,6 +298,9 @@
       line-height: 60px;
     }
     .views-row {
+      display: flex;
+      justify-content: center;
+
       .fa-clock,
       .fa-phone {
         color: var(--wsTertiaryColor, black);
